# pjson

./: .editorconfig  .gitignore  CMakeLists.txt
cmake/: CodeCoverage.cmake
sample/: main.c  parse.c  platform.h  tokenize.c
shared/: stats_parser.h
src/: pjson.c  pjson.h  pjson_config.h
test/: datastruct_parser.h  pjson_config_test.h  test_main.c  test_pjson_basics.c  test_pjson_errors.c  test_pjson_feed_fuzzy.c  test_pjson_parse_datastruct.c  test_pjson_value_helpers.c  toplevel_value_parser.h  vec_config.h
test/data/: formatted_1mb.json  invalid_binary_data.json  minified_1mb.json
